--- a/css/grid-2.css
+++ b/css/grid-2.css
@@ -228,6 +228,8 @@ header p {
 	padding: 20px 20px 0 20px;
 	border: 2px solid #d3dee7;
 	margin-bottom: 30px;
+	box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.8) , inset 10px 10px 5px rgba(0, 0, 0, 0.15) ;
+	border-radius: 7px 20px 7px  20px;
 }
 
 @media screen and (max-width: 767px) {
