--- a/css/grid-2.css
+++ b/css/grid-2.css
@@ -53,6 +53,8 @@ body {
 	font-size: 15px;
 	margin: 0;
 	padding: 0;
+	background-image: url(images/zigzag.png);
+	background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6, p {
